# gov-seek

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ping-qdrant.yml
.streamlit/: config.toml
scripts/: ping_qdrant.py
src/: main.py  scrape_websites.py  streamlit_app.py
src/data_pipeline/: batch_embeddings.py  combine_embeddings.py  crawler.py  vector_store.py
src/retrieval_pipeline/: retriever.py
