[project]
dependencies = [
  "beautifulsoup4>=4.13.3",
  "dotenv>=0.9.9",
  "ipykernel>=6.29.5",
  "langchain-openai>=0.3.7",
  "langchain-qdrant>=0.2.0",
  "loguru>=0.7.3",
  "openai>=1.65.1",
  "pre-commit>=4.1.0",
  "qdrant-client>=1.13.2",
  "requests>=2.32.3",
  "setuptools>=75.8.0",
  "tiktoken>=0.9.0",
  "tqdm>=4.67.1"
]
description = "Add your description here"
name = "codespaces-blank"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.interrogate]
exclude = ["tests", "setup.py", "docs", "notebooks", "__init__.py", "src/sunray/packages"]
fail-under = 90
ignore-init-method = true
ignore-init-module = true
ignore-regex = []
verbose = 1
whitelist-regex = []
